8323835: Updating ASM to 9.6 for JDK 23