@@ -82,6 +82,14 @@ public interface Opcodes {
     int ASM8 = 8 << 16 | 0 << 8;
     int ASM9 = 9 << 16 | 0 << 8;
 
+    /**
+      * <i>Experimental, use at your own risk. This field will be renamed when it becomes stable, this
+      * will break existing code using it. Only code compiled with --enable-preview can use this.</i>
+      *
+      * @deprecated This API is experimental.
+      */
+    @Deprecated int ASM10_EXPERIMENTAL = 1 << 24 | 10 << 16 | 0 << 8;
+
     /*
       * Internal flags used to redirect calls to deprecated methods. For instance, if a visitOldStuff
       * method in API_OLD is deprecated and replaced with visitNewStuff in API_NEW, then the
@@ -312,7 +320,6 @@ public interface Opcodes {
     int V20 = 0 << 16 | 64;
     int V21 = 0 << 16 | 65;
     int V22 = 0 << 16 | 66;
-    int V23 = 0 << 16 | 67;
 
     /**
       * Version flag indicating that the class is using 'preview' features.
@@ -588,4 +595,3 @@ public interface Opcodes {
     int IFNULL = 198; // visitJumpInsn
     int IFNONNULL = 199; // -
 }
-
